' @autogenerated
@startuml
left to right direction
title Clases para security scope
class access.TrustedClient{
uid:string
code:string
publicAllow:boolean
secretOauth:string
allowedRedirects:string
enabled:boolean
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}
class access.RelyingParty{
uid:string
code:string
apiKey:string
enabled:boolean
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}
class access.SecurityScope{
uid:string
resource:string
scope:string
enabled:boolean
kind:SecurityScopeKindOptions
visibility:SecurityScopeVisibilityOptions
version:integer
list()
retrieve()
create()
update()
delete()
disable()
enable()
}
access.TrustedClient "1"  o--  "N*" access.SecurityScope: trustedClient
access.RelyingParty "1"  o--  "N*" access.SecurityScope: relyingParty

footer Generado el %date("dd.MM.yyyy' a las 'HH:mm")
@enduml
